--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,7 +14,7 @@ $bp-largest: 75em; // 1200px
 $bp-large: 62.5em; // 1000px
 $bp-medium: 50em; // 800px
 $bp-small: 42.5em; // 680px;
-$bp-super-small: 22.18em; // 355px;
+$bp-super-small: 29.0em; // 466px;
 
 *,
 *::before,
